[package]
name = "websocket-tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
futures = "0.3"
axum = { version = "0.7", features = ["ws"] }
http = "0.2"
yamux = "0.13.3"
tokio-yamux = "0.3.8"
thiserror = "1.0.26"
once_cell = "1.20.0"
tokio-util = { version = "0.7.12", features = ["compat", "codec"] }
tracing = "0.1.40"
wildmatch = "2.3.4"
anyhow = "1.0.89"
